syntax = "proto3";
package relayer.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/kava-labs/kava-bridge/relayer/broadcast/types";

option (gogoproto.goproto_getters_all) = false;

// TraceContext contains the tracing context of a message, converted to a MapCarrier
// https://pkg.go.dev/go.opentelemetry.io/otel@v1.7.0/propagation#MapCarrier
message TraceContext {
  map<string, string> carrier = 1;
}
